# Repo-Graph

./: .example.env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt
API/: __init__.py  health.py  indexing.py  main.py
Client/: agent.py  client.py  llm.py  prompt.py
Database/: __init__.py
Database/Neo4j/: init.py  initialise.py
MCP/Analyst/: .gitignore  Dockerfile  SETUP_COMPLETE.md  __init__.py  main.py  pyproject.toml  requirements.txt
MCP/Analyst/Utils/: __init__.py  analysis_service.py  db_connection.py  logger.py  neo4j_graph.py
MCP/Graph_Query/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
MCP/Graph_Query/Test/: __init__.py  test_custom_queries.py  test_dependencies.py  test_find_entity.py  test_integration.py  test_relationships.py
MCP/Graph_Query/Utils/: __init__.py  db_connection.py  query_service.py
MCP/Indexer/: DOCKER_SETUP.md  Dockerfile  cypherquery_utils.py  docker-compose.yml  extract_class_metadata.py  function_metadata.py  function_utils.py  ingest_class_to_graph.py  ingest_function_to_graph.py  main.py  requirements.txt  utils.py
MCP/Indexer/Test/: test_extract_entities.py  test_ingest_all_files.py  test_parse_python_file.py  test_process_single_file.py
MCP/Indexer/Tools/: extract_entities.py  get_python_ast.py  index_repo.py  process_single_file.py
MCP/Indexer/Utils/: common.py  cypherquery_utils.py  file_processor.py  graph_operations.py  import_utils.py  ingest_module_to_graph.py  relationships.py  utils.py
MCP/Indexer/Utils/classes/: extract_class_metadata.py  ingest_class_to_graph.py
MCP/Indexer/Utils/functions/: function_metadata.py  ingest_function_to_graph.py
MCP/Indexer/classes/: extract_class_metadata.py  ingest_class_to_graph.py
MCP/Indexer/functions/: function_metadata.py  ingest_function_to_graph.py
