[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-query-mcp"
version = "1.0.0"
description = "Graph Query MCP - Knowledge graph traversal and relationship queries for code analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Knowledge Graph Team", email = "kg-team@example.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "knowledge-graph",
    "neo4j",
    "code-analysis",
    "dependency-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/graph-query-mcp"
Documentation = "https://github.com/your-org/graph-query-mcp/blob/main/README.md"
Repository = "https://github.com/your-org/graph-query-mcp.git"
Issues = "https://github.com/your-org/graph-query-mcp/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["Test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
